--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Speech2Text</string>
     <string name="action_settings">Settings</string>
-    <string name="speech_prompt">Diga Algo!</string>
-    <string name="tap_on_mic">Toque no microfone para falar!</string>
+    <string name="speech">Say something!</string>
+    <string name="tap">Tap on mic!</string>
 </resources>
